# spigot-json-gen

./: .gitignore  README.md  run.sh  settings.gradle  test.txt
app/: .gitignore  build.gradle
app/include/: net_ioixd_spigotjsongen_WebScraper.h
app/rust/: Cargo.toml
app/rust/src/: lib.rs
app/src/main/java/net/ioixd/spigotjsongen/: App.java  ClassParserFuture.java  MethodParserFuture.java  ParsedClass.java  ParsedConstructor.java  ParsedEnum.java  ParsedMethod.java  WebScraper.java
