[package]
name = "native_web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
flapigen = "0.6.0"
jni = "0.21.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }

[lib]
crate-type = ["cdylib"]
